--- a/about/index.html
+++ b/about/index.html
@@ -21,10 +21,7 @@ overview: true
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
 
-            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below labelled "ADI Gateway".
-               <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">Here</a></p> is a presentation I gave that shows
-               how to use an oscilliscope to break RSA encryption on an IoT device.
-            </p>
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below ("ADI Gateway"). <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">Here</a></p> is a presentation I gave that shows how to use an oscilliscope to break RSA encryption on an IoT device.</p>
 
             <p>My open source activities include contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
