--- a/about/index.html
+++ b/about/index.html
@@ -18,10 +18,10 @@ overview: true
             <p>I'm a graduate student (MS in Computer Science) 
             with 10 years of software engineering experience. I enjoy all <a href="https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)">BEAM</a> languages,
             currently my day job is Elixir, my passion is Erlang, and my hobby
-            (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
+            (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>. I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years, English teacher, and mechanic.
             </p>
 
-            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below ("ADI Gateway"). <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">Here</a></p> is a presentation I gave that shows how to use an oscilliscope to break RSA encryption on an IoT device.</p>
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below.</p>
 
             <p>My open source activities include contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
@@ -33,10 +33,6 @@ overview: true
               Client Gem</a> and I have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries</a>.
             </p>
-            <p>
-I have worked for a number of high profile clients such as Netflix, Google and
- Harvard. I am a former Wall Street 
-options trader of 5 years, English teacher, and mechanic.</p>
 
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
