master Fix typo

--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
             <div class="one-half last">
                 <h4>Hardware Hacking</h4>
-                <p>See my presentation on how to hack hardware with Simple Power Analysis. Demonstrates breaking RSA encryption with an oscilloscope. Presentation is
+                <p>See my presentation on how to hack hardware with Simple Power Analysis, demonstrates breaking RSA encryption with an oscilloscope. Presentation is
                 available <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">here.</a></p>
             </div>
 
