--- a/about/index.html
+++ b/about/index.html
@@ -162,6 +162,18 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
 
                   <li>
                       <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t">
+                          <img src="/img/osc2.png" alt="" />
+                          <div class="caption">
+                              <div>
+                                  <h4>Hardware Hacking</h4>
+                                  <span>Break IoT security, in this case passwords, with an oscilloscope</span>
+                              </div>
+                          </div>
+                      </a>
+                  </li>
+
+                  <li>
+                      <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t">
                           <img src="/img/osc.png" alt="" />
                           <div class="caption">
                               <div>
