--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ overview: true
             <p>I'm a graduate student (MS in Computer Science) 
             with 10 years of software engineering experience. I enjoy all <a href="https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)">BEAM</a> languages,
             currently my day job is Elixir, my passion is Erlang, and my hobby
-            (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>. I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years, English teacher, and mechanic.
+            (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
 
             <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below.</p>
@@ -33,6 +33,8 @@ overview: true
               Client Gem</a> and I have a few of <a href="https://github.com/mattjg908/st7735_elixir">my own
                                     libraries</a>.
             </p>
+
+            <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years, English teacher, and mechanic.</p>
 
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
