--- a/about/index.html
+++ b/about/index.html
@@ -156,7 +156,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
                           <div class="caption">
                               <div>
                                   <h4>Hardware Hacking</h4>
-                                  <span>Break IoT security, in this case passwords, with an oscilloscope</span>
+                                  <span>Tools of the trade</span>
                               </div>
                           </div>
                       </a>
