--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@ overview: true
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
 
-            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below.</p>
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below (ADI Gateway).</p>
 
             <p>My open source activities include contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
