--- a/about/index.html
+++ b/about/index.html
@@ -86,13 +86,18 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
             <div class="one-half last">
                 <h4>Hardware Hacking</h4>
                 <p>See my presentation on how to hack hardware with Simple Power Analysis, demonstrates breaking RSA encryption with an oscilloscope. Presentation is
-                available <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">here.</a></p>
+                available <a href="https://docs.google.com/presentation/d/13RBVlxzd8dM_yB_70Rmzda348xZdte2t/edit?usp=sharing&ouid=104704378500619256091&rtpof=true&sd=true">here.</a>
+                Here is an Amazon Echo I was hacking in order to run Nerves:
+                </p>
+                <img src="/img/echo.png" alt="" />
             </div>
 
             <div class="one-half last">
                 <h4>Prototyping</h4>
                 <p>My 3D printed Tiny Retro Macintosh computer:</p>
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Made a 3D printed, retro Tiny Mac. Perfect for fun with <a href="https://twitter.com/hashtag/elixir?src=hash&amp;ref_src=twsrc%5Etfw">#elixir</a> 1.14, <a href="https://twitter.com/hashtag/erlang?src=hash&amp;ref_src=twsrc%5Etfw">#erlang</a> OTP 25- who needs an M1 when you have Raspberry Pi Zeros!<br><br>Found the plans / stl files here: <a href="https://t.co/FHWoKi57oQ">https://t.co/FHWoKi57oQ</a> <a href="https://t.co/28euLUieMY">pic.twitter.com/28euLUieMY</a></p>&mdash; Galvatron (@mattjg908) <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022
+                  <img src="/img/retro_mac.png" alt="" />
+                </a>
             </div>
 
         </section>
