master Remove header

--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,7 @@ use <a href="https://archlinux.org/">Arch</a>, btw...</p>
             <div class="one-half last">
                 <h4>Prototyping</h4>
                 <p>My 3D printed Tiny Retro Macintosh computer:</p>
-                <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">October 19, 2022
+                <a href="https://twitter.com/mattjg908/status/1582792580332257280?ref_src=twsrc%5Etfw">
                   <img src="/img/retro_mac.png" alt="" />
                 </a>
             </div>
