--- a/about/index.html
+++ b/about/index.html
@@ -36,6 +36,8 @@ overview: true
 
             <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years, English teacher, and mechanic.</p>
 
+            <p> Here's a presentation where I demonstrate how to attack RSA encryption, <iframe width="560" height="315" src="https://www.youtube.com/embed/kzEUFmwvnxI?si=mgB6SAokxgSNIpwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
  spinning wrenches, and reading books on Native American history.
