master Move video embed

--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,11 @@ overview: true
 
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
 <a href="https://www.youtube.com/watch?v=3o0gy-JqgmQ&feature=youtu.be">msx</a>),
- spinning wrenches, and reading books on Native American history. I'm also a student of cryptography, here's a presentation where I demonstrate how to attack RSA encryption: <iframe width="560" height="315" src="https://www.youtube.com/embed/kzEUFmwvnxI?si=mgB6SAokxgSNIpwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+ spinning wrenches, and reading books on Native American history. I'm also a student of cryptography, here's a presentation where I demonstrate how to attack RSA encryption:
+</p>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kzEUFmwvnxI?si=mgB6SAokxgSNIpwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+</p>
         </section>
 
         <section class="page-content clearfix">
