Add links to About

--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,9 @@ overview: true
             (not BEAM related) is the <a href="http://doc.cat-v.org/plan_9/programming/c_programming_in_plan_9">Plan 9 flavor of C</a>.
             </p>
 
-            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below (ADI Gateway).</p>
+            <p>I invented a Nerves-powered Raspberry Pi device which solves a major issue in data centers- so far over 5,000 units of the prototype have sold, see a picture of it below (ADI Gateway).
+            <a href="https://www.erlang-solutions.com/blog/unleashing-the-power-of-snmp-exposing-your-embedded-elixir-erlang-nerves-grisp-apps-to-the-world/">Here's a blog post I wrote about interacting with hardware</a> with Elixir and Erlang.
+            </p>
 
             <p>My open source activities include contributions to <a
               href="https://github.com/elixir-lang/elixir-lang.github.com/pull/1560">Elixir-Lang</a>,
@@ -34,7 +36,7 @@ overview: true
                                     libraries</a>.
             </p>
 
-            <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years, English teacher, and mechanic.</p>
+            <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a <a href="https://www.youtube.com/watch?v=Ci9j2RMJPtM">former Wall Street options trader of 5 years</a>, English teacher, and mechanic.</p>
 
 
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
