Update wall street video link

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@ overview: true
                                     libraries</a>.
             </p>
 
-            <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a <a href="https://www.youtube.com/watch?v=Ci9j2RMJPtM">former Wall Street options trader of 5 years</a>, English teacher, and mechanic.</p>
+            <p>I have worked for a number of high profile clients such as Netflix, Google and Harvard. I am a former Wall Street options trader of 5 years (watch a video I made about derivatives <a href="https://www.youtube.com/watch?v=Ci9j2RMJPtM">here</a>), English teacher, and mechanic.</p>
 
 
 <p>When away from my computer you can find me doing motorcycle stunts (<a href="https://youtu.be/1jLTRDY_gB4">dirtbike</a>,
